fix news /contact alignment

--- a/_www/assets/css/app.css
+++ b/_www/assets/css/app.css
@@ -4852,10 +4852,38 @@ div.jumbotron.praxis {
     margin-top: 1.2em;
     margin-bottom: 0.5em; }
 
+#kunden {
+  background: skyblue;
+  margin-top: 8em;
+  margin-bottom: 6em; }
+
 #werteschaffen {
   background: #5cb85c;
   margin-top: 8em;
   margin-bottom: 6em; }
+
+#cntct {
+  background: #4baad3;
+  margin-top: 8em;
+  margin-bottom: 6em; }
+  #cntct .display-5 {
+    margin-top: 0em;
+    margin-bottom: 0em; }
+
+#news {
+  background: skyblue;
+  margin-top: 8em;
+  margin-bottom: 6em; }
+  #news .display-5 {
+    margin-top: 0em;
+    margin-bottom: 0em; }
+
+.card-img-left {
+  border-bottom-left-radius: calc(.25rem - 1px);
+  border-top-left-radius: calc(.25rem - 1px);
+  float: left;
+  padding-right: 5px;
+  margin-bottom: -1.25em; }
 
 .footer {
   background-color: black;
@@ -4868,25 +4896,6 @@ div.jumbotron.praxis {
 
 #footernotes {
   margin-top: 25px; }
-
-div.jumbotron {
-  background: #4baad3;
-  padding-top: 3em;
-  padding-bottom: 3em;
-  margin-top: 8em;
-  margin-bottom: 6em; }
-
-#news {
-  background: skyblue;
-  margin-top: 8em;
-  margin-bottom: 6em; }
-
-.card-img-left {
-  border-bottom-left-radius: calc(.25rem - 1px);
-  border-top-left-radius: calc(.25rem - 1px);
-  float: left;
-  padding-right: 5px;
-  margin-bottom: -1.25em; }
 
 /*----------------------
 ----- Contact Styles ----
