--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -114,10 +114,45 @@ span.anchor {
         }
     }
     
+    #kunden {
+        background: skyblue;
+        margin-top: 8em;
+        margin-bottom: 6em;
+    }
+    
     #werteschaffen {
         background: #5cb85c;
         margin-top: 8em;
         margin-bottom: 6em;
+    }
+    
+    #cntct {
+        background: #4baad3;
+        margin-top: 8em;
+        margin-bottom: 6em;
+        .display-5 {
+            margin-top: 0em;
+            margin-bottom: 0em;
+        }
+    }
+    
+    #news {
+        background: skyblue;
+        margin-top: 8em;
+        margin-bottom: 6em;
+        .display-5 {
+            margin-top: 0em;
+            margin-bottom: 0em;
+        }
+    }
+    
+    // Footer
+    .card-img-left {
+        border-bottom-left-radius: calc(.25rem - 1px);
+        border-top-left-radius: calc(.25rem - 1px);
+        float: left;
+        padding-right: 5px;
+        margin-bottom: -1.25em;
     }
     
     .footer {
@@ -133,29 +168,6 @@ span.anchor {
     
     #footernotes {
         margin-top: 25px;
-    }
-    
-    div.jumbotron {
-        background: #4baad3;
-        padding-top: 3em;
-        padding-bottom: 3em;
-        margin-top: 8em;
-        margin-bottom: 6em;
-    }
-    
-    #news {
-        background: skyblue;
-        margin-top: 8em;
-        margin-bottom: 6em;
-    }
-    
-    // Footer
-    .card-img-left {
-        border-bottom-left-radius: calc(.25rem - 1px);
-        border-top-left-radius: calc(.25rem - 1px);
-        float: left;
-        padding-right: 5px;
-        margin-bottom: -1.25em;
     }
     
     // Contact Form
